--- a/Praticando/index.html
+++ b/Praticando/index.html
@@ -131,7 +131,7 @@
     <p>Todos os direitos reservados.</p>
   </footer>
 
-  <script src="script03.js"></script>
+  <script src="Dimensoes_Distancias/script.js"></script>
 </body>
 
 </html>
