--- a/Praticando/index.html
+++ b/Praticando/index.html
@@ -7,6 +7,9 @@
   <title>Animais Fantásticos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
+  <!-- No head do borwser -->
+  <script>document.documentElement.className += ' js';</script>
+
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
@@ -21,7 +24,7 @@
   </nav>
   <section class="grid-section animais" id="animais">
     <h1 class="titulo">Animais Fantásticos</h1>
-    <ul class="animais-lista">
+    <ul class="animais-lista js-tabmenu">
       <li>
         <img src="img/imagem1.jpg">
       </li>
@@ -41,7 +44,7 @@
         <img src="img/imagem6.jpg">
       </li>
     </ul>
-    <div class="animais-descricao">
+    <div class="animais-descricao js-tabcontent">
       <section>
         <h2>Raposa</h2>
         <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
@@ -131,7 +134,7 @@
     <p>Todos os direitos reservados.</p>
   </footer>
 
-  <script src="Dimensoes_Distancias/script.js"></script>
+  <script src="NavegacaoPorTabs/index.js"></script>
 </body>
 
 </html>
