--- a/Praticando/index.html
+++ b/Praticando/index.html
@@ -134,7 +134,7 @@
     <p>Todos os direitos reservados.</p>
   </footer>
 
-  <script src="Prototype/script.js"></script>
+  <script src="Strings/script.js"></script>
 </body>
 
 </html>
